--- a/src/Dockerfile-pipeline
+++ b/src/Dockerfile-pipeline
@@ -10,7 +10,7 @@ ENV CLASSLA_RESOURCES_DIR  "/app/data/classla"
 
 RUN python -c "import classla; import os; \
                CLASSLA_RESOURCES_DIR = os.getenv('CLASSLA_RESOURCES_DIR', None); \
-               processors = 'tokenize,pos,lemma,ner'; \
+               processors = 'tokenize,pos,lemma'; \
                classla.download('sl', processors=processors);"
 
 # Install additional requirements to run REST API
@@ -18,4 +18,4 @@ RUN python -c "import classla; import os; \
 
 EXPOSE 5050
 
-CMD ["uvicorn", "pipeline:app", "--host", "0.0.0.0", "--port", "5050"]
+CMD ["uvicorn", "pipeline_api:app", "--host", "0.0.0.0", "--port", "5050"]
