fix a problem with swift regex and missing dict keys

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,37 +2,33 @@ version: '3.9'
 
 services:
   ner:
-    image: slo-ner
+    image: ner
     ports:
       - "5040:5040"
 
   pos:
-    image: slo-pos
+    image: pos
     environment:
       POS_MODEL_PATH: "/app/models/sloberta"
     ports:
       - "5030:5030"
-    volumes:
-      - type: bind
-        source: "../models/xpos/custom_xpos_model_sloberta—combined_all—8e—24b—500ws—5e-05lr_new_test"
-        target: "/app/models/sloberta"
-        read_only: true
 
   coref:
-    image: slo-coref
+    image: coref
     environment:
       COREF_MODEL_PATH: "/app/models/sloberta"
     ports:
       - "5020:5020"
-    volumes:
-      - type: bind
-        source: "../models/coref/spanbert-senticoref10"
-        target: "/app/models/sloberta"
-        read_only: true
 
   pipeline:
-    image: slo-pipeline
+    image: pipeline
     environment:
+      SLO_COREF_SERVICE_HOST: "coref"
+      SLO_COREF_SERVICE_PORT: "5020"
+      SLO_NER_SERVICE_HOST: "ner"
+      SLO_NER_SERVICE_PORT: "5040"
+      SLO_POS_SERVICE_HOST: "pos"
+      SLO_POS_SERVICE_PORT: "5030"
       CLASSLA_RESOURCES_DIR: "/app/data/classla"
     ports:
       - "5050:5050"
@@ -40,9 +36,3 @@ services:
       - ner
       - pos
       - coref
-  frontend:
-    image: frontend
-    ports:
-      - "80:80"
-    links:
-      - pipeline
