add README and k8s deployment configs

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -36,3 +36,9 @@ services:
       - ner
       - pos
       - coref
+  frontend:
+    image: frontend
+    ports:
+      - "8080:80"
+    links:
+      - pipeline
